plugins {
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    // https://mvnrepository.com/artifact/org.javatuples/javatuples
    implementation 'org.javatuples:javatuples:1.2'
    implementation group: 'com.intellij', name: 'forms_rt', version: '6.0.5'
    implementation 'org.jetbrains:annotations:20.1.0'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testImplementation 'org.mockito:mockito-core:4.0.0'
}

sourceSets {
    main {
        resources {
            srcDirs "src/main/res"
        }
    }
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).all {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).all {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}


sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16
